# ai-chat-assistant

./: .gitignore  README.md  pyproject.toml  run_gui.py
src/assistant/: cli.py  config.py  gui.py  models.py  openai_client.py  prompts.py
src/assistant/services/: explain_service.py  quiz_service.py
src/assistant/utils/: credentials.py  errors.py  io.py
