[project]
name = "ai-chat-assistant"
version = "0.1.0"
description = "CLI AI assistant for explanations and quiz generation"
requires-python = ">=3.10"
dependencies = [
  "openai>=1.0.0",
  "python-dotenv>=1.0.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
